<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828 "
    tools:context="com.example.finanzmanager.AddNew.ExpenseMenu">

    <TextView
        android:id="@+id/textView_cinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Kino"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_grocery"
        app:layout_constraintEnd_toEndOf="@+id/Button_cinema"
        app:layout_constraintStart_toStartOf="@+id/Button_cinema"
        app:layout_constraintTop_toBottomOf="@+id/Button_cinema" />

    <TextView
        android:id="@+id/textView_gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Sprit"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_gym"
        app:layout_constraintEnd_toEndOf="@+id/Button_gas"
        app:layout_constraintStart_toStartOf="@+id/Button_gas"
        app:layout_constraintTop_toBottomOf="@+id/Button_gas" />

    <TextView
        android:id="@+id/textView_fastFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="FastFood"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_hotel"
        app:layout_constraintEnd_toEndOf="@+id/Button_fastFood"
        app:layout_constraintStart_toStartOf="@+id/Button_fastFood"
        app:layout_constraintTop_toBottomOf="@+id/Button_fastFood" />

    <TextView
        android:id="@+id/textView_groceries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Lebensmittel"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_travel"
        app:layout_constraintEnd_toEndOf="@+id/Button_grocery"
        app:layout_constraintStart_toStartOf="@+id/Button_grocery"
        app:layout_constraintTop_toBottomOf="@+id/Button_grocery" />

    <TextView
        android:id="@+id/textView_gym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Fitnessstudio"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_extraCatExp"
        app:layout_constraintEnd_toEndOf="@+id/Button_gym"
        app:layout_constraintStart_toStartOf="@+id/Button_gym"
        app:layout_constraintTop_toBottomOf="@+id/Button_gym" />

    <TextView
        android:id="@+id/textView_extraCat_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/droid"
        android:text=" "
        android:textColor="#FFF"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/Button_extraCatExp"
        app:layout_constraintStart_toStartOf="@+id/Button_extraCatExp"
        app:layout_constraintTop_toBottomOf="@+id/Button_extraCatExp" />

    <TextView
        android:id="@+id/textView_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Hotel"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_extraCatExp"
        app:layout_constraintEnd_toEndOf="@+id/Button_hotel"
        app:layout_constraintStart_toStartOf="@+id/Button_hotel"
        app:layout_constraintTop_toBottomOf="@+id/Button_hotel" />

    <TextView
        android:id="@+id/textView_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Reisen"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_extraCatExp"
        app:layout_constraintEnd_toEndOf="@+id/Button_travel"
        app:layout_constraintStart_toStartOf="@+id/Button_travel"
        app:layout_constraintTop_toBottomOf="@+id/Button_travel" />

    <TextView
        android:id="@+id/textView_atm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Abhebung"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_fastFood"
        app:layout_constraintEnd_toEndOf="@+id/Button_atm"
        app:layout_constraintStart_toStartOf="@+id/Button_atm"
        app:layout_constraintTop_toBottomOf="@+id/Button_atm" />

    <TextView
        android:id="@+id/textView_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Bar"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_gas"
        app:layout_constraintEnd_toEndOf="@+id/Button_cash"
        app:layout_constraintStart_toStartOf="@+id/Button_cash"
        app:layout_constraintTop_toBottomOf="@+id/Button_cash" />

    <ImageButton
        android:id="@+id/Button_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="210dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Button_hotel"
        app:layout_constraintTop_toBottomOf="@+id/Button_grocery"
        app:srcCompat="@mipmap/plane_icon_round" />

    <ImageButton
        android:id="@+id/Button_extraCatExp"
        android:layout_width="73dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="70dp"
        android:background="#282828"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_hotel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_gym"
        app:srcCompat="@mipmap/plus_icon_round" />

    <ImageButton
        android:id="@+id/Button_gym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="210dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_hotel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_gas"
        app:srcCompat="@mipmap/gym_icon_round" />

    <ImageButton
        android:id="@+id/Button_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="210dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_fastFood"
        app:srcCompat="@mipmap/hotel_icon_round" />

    <ImageButton
        android:id="@+id/Button_grocery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="350dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Button_fastFood"
        app:layout_constraintTop_toBottomOf="@+id/Button_cinema"
        app:srcCompat="@mipmap/grocery_icon_round" />

    <ImageButton
        android:id="@+id/Button_gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="350dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_fastFood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_cash"
        app:srcCompat="@mipmap/gas_icon_round" />

    <ImageButton
        android:id="@+id/Button_fastFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="350dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_atm"
        app:srcCompat="@mipmap/fastfood_icon_round" />

    <ImageButton
        android:id="@+id/Button_cinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="450dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Button_atm"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cinema_icon_round" />

    <ImageButton
        android:id="@+id/Button_atm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="450dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/atm_icon_round" />

    <ImageButton
        android:id="@+id/Button_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="450dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_atm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/bar_icon_round" />

    <Spinner
        android:id="@+id/dropDown_In_Out"
        android:layout_width="203dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#282828"
        android:backgroundTint="#282828"
        android:popupBackground="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Button_createCat_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#282828"
        android:fontFamily="@font/droid"
        android:text="erstellen"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toEndOf="@+id/dropDown_In_Out"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>