...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828 "
    tools:context="com.example.finanzmanager.AddNew.CreateCategoryExpense">

    <EditText
        android:id="@+id/textView_newCatName_expense"
        android:layout_width="276dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        android:ems="10"
        android:fontFamily="@font/droid"
        android:hint=" Name der Kategorie"
        android:inputType="textPersonName"
        android:visibility="visible"
        android:maxLength="17"
        app:layout_constraintBottom_toTopOf="@+id/Button_create_category_expense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_selectImage_expense" />

    <ImageButton
        android:id="@+id/Button_selectImage_expense"
...
